Start splitting up testing logic

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,8 @@ LIBFLAGS_TEST=-lpthread $(LIBFLAGS)
 
 CHTTP_CLIENT:=$(wildcard chttp/client/*.c)
 CHTTP_CLIENT_OBJS:=$(CHTTP_CLIENT:.c=.o)
-TEST:=$(wildcard test/*.c)
-TEST_INCLUDES:=$(wildcard test/*.h)
+TEST:=$(wildcard test/*.c chttp/test/*.c )
+TEST_INCLUDES:=$(wildcard test/*.h chttp/test/*.h)
 TEST_OBJS:=$(TEST:.c=.o)
 INCLUDES:=$(wildcard *.h */*.h)
 INCLUDES:=$(filter-out $(TEST_INCLUDES), $(INCLUDES))
