Rough out mounting

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,11 +4,12 @@ FIBERFS_TEST=../src/fiberfs_test
 FLAGS=-q
 TESTS=$(sort $(wildcard */*.cht */*.tst))
 TESTS_JSON=$(sort $(wildcard 003_json/*.tst))
+TESTS_FIBER=$(sort $(wildcard 004_fiber/*.tst))
 PRE_EXEC=
 VALGRIND=valgrind --error-exitcode=1 --leak-check=full -q
 GDB=gdb --args
 
-.PHONY:	all test check fiberfs_test valgrind verbose
+.PHONY:	all test check fiberfs_test valgrind verbose vjson json vfiber fiber
 
 all:		check
 
@@ -32,6 +33,11 @@ vjson:		PRE_EXEC=$(VALGRIND)
 vjson:		json
 
 json:		$(TESTS_JSON)
+
+vfiber:		PRE_EXEC=$(VALGRIND)
+vfiber:		fiber
+
+fiber:		$(TESTS_FIBER)
 
 %.cht:		fiberfs_test FORCE
 		$(PRE_EXEC) $(FIBERFS_TEST) $(FLAGS) $@
