Makefile with deps support

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-*.o
-*.so
-*.a
-*.gcda
-*.gcno
-*.gcov
 .vscode
-src/coverage.info
+src/*.a
+src/*.so
+src/build
 src/chttp_client
 src/fjson_client
 src/fiberfs_test
-src/report
+src/coverage.info
 src/gcov.data
+src/report
 tests/afl_json/results
