--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 CFLAGS=-O3 -Wall -Wextra -Wpedantic -Werror -g -fPIC -I. -Ichttp -Ifjson -fno-omit-frame-pointer
 CFLAGS_GCC=
 CFLAGS_CLANG=-Wno-gnu-zero-variadic-macro-arguments
-DEPFLAGS=-MMD -MP -MF $(BUILD)/$*.d
+DEPFLAGS=-MMD -MP
 LDFLAGS=-shared
 LIBFLAGS=
 LIBFLAGS_TEST=-lpthread $(LIBFLAGS)
